# Bachelor-s-thesis

./: .gitattributes  .gitignore  README.md  model_checkpoint.pth  pyproject.toml  requirements.txt  settings.cfg
.devcontainer/: devcontainer.json
docker/: Dockerfile  common.sh  run.sh
eval/: HE_A_gen_bha.npy  HE_A_gen_cor.npy  HE_A_norm.npy  HE_A_norm_cor.npy  HE_B_gen_cor.npy  HE_L_gen_bha.npy  HE_L_norm.npy  HE_gen_mt_info.npy  HE_inter_mt_info.npy  IHC_A.npy  IHC_B_gen_cor.npy  IHC_B_norm_bha.npy  IHC_L.npy  IHC_L_gen_cor.npy  IHC_L_norm.npy  IHC_L_norm_cor.npy  IHC_gen_mt_info.npy  IHC_inter_mt_info.npy  cifar_load.py  cnn.py  cut_results.py  download_artifacts.py  eval_cnn.py  fid.py  histogram.py  interpolation.py  macenko.py  merge_images.py  metrics_visualisation.py  new_cnn_test.py  preproccesing.py  quantitative_analysis.py
eval/4x_mean/: IHC_A_norm.npy
eval/4x_mean_new/: HE_A_inter_bha.npy  HE_A_inter_cor.npy  HE_A_norm_bha.npy  HE_A_norm_cor.npy  HE_B_inter_cor.npy  HE_B_norm_bha.npy  HE_B_norm_cor.npy  HE_L_gen_bha.npy  HE_L_gen_cor.npy  HE_L_inter_bha.npy  HE_L_norm_bha.npy  HE_L_norm_cor.npy  HE_gen_mt_info.npy  HE_inter_mt_info.npy  HE_norm_mt_info.npy  IHC_A_gen_cor.npy  IHC_A_inter_bha.npy  IHC_A_norm_bha.npy  IHC_A_norm_cor.npy  IHC_B_gen_bha.npy  IHC_B_inter_bha.npy  IHC_B_inter_cor.npy  IHC_B_norm_bha.npy  IHC_B_norm_cor.npy  IHC_L_gen_cor.npy  IHC_L_inter_bha.npy  IHC_L_inter_cor.npy  IHC_L_norm_bha.npy  IHC_L_norm_cor.npy  IHC_gen_mt_info.npy  IHC_inter_mt_info.npy  IHC_norm_mt_info.npy
eval/newest/: HE_B_gen_bha.npy  HE_B_inter_bha.npy  (+7 more)
(+22 files in other folders)
