[tool.poetry]
name = "editable-stain-xaicyclegan2"
version = "0.1.0"
description = ""
authors = ["Jack <slobodaapl@gmail.com>"]
packages = [{include = "editable_stain_xaicyclegan2", from = "src"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
#torch = {version = "^2.1.1", source = "torch"} Might need to install these with pip
#torchvision = {version = "^0.16.1", source = "torchvision"}
#torchaudio = {version = "^2.1.1", source = "torchaudio"}
#torchmetrics = {version="^1.2.1", extras=["image"]}
#captum = "^0.7.0"
#streamlit = "^1.29.0"
#kornia = "^0.7.0"
#wandb = "^0.16.1"
#scikit-image = "^0.22.0"
#opencv-cuda = "^0.0.2"
#onnx = "^1.15.0"
#scikit-learn = "*"
#tqdm = "*"
#javabridge = "*"
#python-bioformats = "*"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[[tool.poetry.source]]
name = "torchvision"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[[tool.poetry.source]]
name = "torchaudio"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
